2012-06-10  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/debug_message_window.cpp:
	- openDebugLogDir()とrunOfflineClientNormal()が循環呼び出ししてい
	たバグを修正
	- ウインドウを開いた時にオフラインクライアントを自動実行できていな
	かった不具合を修正

2012-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/debug_client_parser.cpp:
	* src/model/debug_view_data.cpp:
	* src/model/debug_view_data.h:
	* src/qt4/color_setting_dialog.cpp:
	* src/qt4/debug_painter.cpp:
	* src/qt4/draw_config.cpp:
	* src/qt4/draw_config.h:
	- デバッグサーバで指さし方向を扱えるようになった

	* src/model/options.cpp:
	* src/qt4/debug_message_window.cpp:
	- オフラインクライアント実行後にデバッグビューログも自動で読み込むように修正

2012-05-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	* src/Makefile.am:
	* src/qt4/main.cpp:
	- インストール対象にsswindow2を復帰
	- copyrightメッセージの年を更新

	* src/qt4/debug_log_dir_dialog.cpp:
	- デフォルトのログディレクトリをQDir::homePath()からQDir::tempPath()へ変更

2012-05-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/view_config_dialog.cpp:
	- プレイヤの軌跡表示範囲の終了時間を設定するためのシグナル発生元と
	スロット関数が誤っていたバグを修正

	* src/qt4/score_board_painter.cpp:
	- 左右入れ替え時のスコア表示の誤りを修正

2012-04-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/qt4/ball_painter.cpp:
	* src/qt4/field_painter.cpp:
	* src/qt4/player_painter.cpp:
	* src/qt4/player_painter_rcss.cpp:
	- 描画サイズの型がintのままだった箇所を修正

2012-04-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/options.cpp:
	* src/model/options.h:
	* src/qt4/debug_message_window.cpp:
	* src/qt4/debug_message_window.h:
	- 未使用オプションと機能を削除

2012-04-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/debug_view_data.cpp:
	- フォーマットバージョン5に対応し，プレイヤタイプ番号を出力するように変更

2012-04-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/model/debug_client_parser.cpp:
	* src/model/debug_client_parser.h:
	* src/model/debug_view_data.h:
	* src/qt4/debug_painter.cpp:
	- デバッグサーバメッセージフォーマットの更新に対応し，プレイヤタイプ番号を表示できるようにした
	- 旧バージョンのデバッグサーバメッセージフォーマットへの対応を停止

	* src/qt4/debug_message_window.cpp:
	- オフラインクライアント実行中にウェイトカーソルが表示されるようにした
