@@ -1,0 +1,76 @@
+/* XPM */
+static const char * refresh_xpm[] = {
+"16 16 57 1",
+" 	c None",
+".	c #144AC7",
+"+	c #164DC8",
+"@	c #164EC8",
+"#	c #144BC7",
+"$	c #154CC8",
+"%	c #184FC9",
+"&	c #1951CA",
+"*	c #1952CA",
+"=	c #1A53CB",
+"-	c #154BC7",
+";	c #1B53CB",
+">	c #1C55CC",
+",	c #1D56CD",
+"'	c #1E57CD",
+")	c #1E58CE",
+"!	c #154CC7",
+"~	c #174EC9",
+"{	c #1850CA",
+"]	c #1E58CD",
+"^	c #1F5ACE",
+"/	c #205BCF",
+"(	c #225DD0",
+"_	c #225ED0",
+":	c #235FD1",
+"<	c #2461D2",
+"[	c #2561D2",
+"}	c #2562D3",
+"|	c #2663D3",
+"1	c #2865D4",
+"2	c #2B69D6",
+"3	c #2A68D6",
+"4	c #2D6DD8",
+"5	c #4086E5",
+"6	c #2866D5",
+"7	c #2C6CD7",
+"8	c #3171DA",
+"9	c #3678DE",
+"0	c #3A7EE1",
+"a	c #3E83E3",
+"b	c #4187E6",
+"c	c #438BE7",
+"d	c #2A69D6",
+"e	c #2F6FD9",
+"f	c #3375DC",
+"g	c #387BDF",
+"h	c #3C81E3",
+"i	c #4188E6",
+"j	c #458DE8",
+"k	c #2C6BD7",
+"l	c #3071DA",
+"m	c #3578DE",
+"n	c #3A7FE1",
+"o	c #3F86E5",
+"p	c #448BE8",
+"q	c #2D6CD8",
+"r	c #3172DB",
+"          .     ",
+"         +@     ",
+"     #$@%&*=    ",
+"    -+%*;>,')   ",
+"   !~{  ]^/(_   ",
+"  $     (:<[    ",
+"        }|      ",
+"                ",
+"                ",
+"     12         ",
+"   :|34     5   ",
+"  /<67890abc    ",
+"   |defghij     ",
+"   1klmnop      ",
+"    qr          ",
+"                "};
